--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,26 +1,34 @@
 <app-portfolio-header></app-portfolio-header>
-<div class="page">
-  <section class="portfolio-content">
-    <div class="row portfolio-item border-bottom"
-         *ngFor="let project of projects">
-      <div class="col-sm-2 image-container">
-        <img [src]="'assets/portfolio/'+project.imageUrl" class="img-fluid" alt="Image for project: {{project.name}}">
-      </div>
-      <div class="col-sm-10">
-        <section>
-          <div class="row no-gutters">
-            <div class="col-sm-5">
-              <h4>{{project.name}}</h4>
+<div *ngFor="let projectsYear of projectsYears">
+  <div class="page">
+    <h3 class="text-center">{{projectsYear.year}}</h3>
+    <section class="portfolio-content">
+      <div class="row portfolio-item border-bottom"
+           *ngFor="let project of projectsYear.projects">
+        <div class="col-sm-2 image-container">
+          <img [src]="'assets/portfolio/'+project.imageUrl" class="img-fluid" alt="Image for project: {{project.name}}">
+        </div>
+        <div class="col-sm-10">
+          <section>
+            <div class="row no-gutters">
+              <div class="col-sm-5">
+                <h4>{{project.name}}</h4>
+              </div>
+              <div class="col-sm-7 text-sm-right" [ngSwitch]="project.isPrivate == true">
+                <a *ngSwitchCase="false" class="text-black-50" href="{{project.repoUrl}}" target="_blank">{{linkShortenerService.getShortLink(project.repoUrl)}}</a>
+                <span *ngSwitchCase="true" class="text-black-50">### private repository ###</span>
+              </div>
             </div>
-          </div>
-          <p>
-            {{project.description}}
-          </p>
-          <p class="badge-container">
-            <span class="badge badge-pill badge-light" *ngFor="let tech of project.technologies">{{tech}}</span>
-          </p>
-        </section>
+            <p>
+              {{project.description}}
+            </p>
+            <p class="badge-container">
+              <span class="badge badge-pill badge-light" *ngFor="let tech of project.technologies">{{tech}}</span>
+            </p>
+          </section>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </div>
 </div>
+
