--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,10 +66,10 @@ h3 {
   font-size: 1.35rem;
   //border-bottom: 1px solid rgba(0, 0, 0, 0.35);
   font-weight: 700;
-  padding: 0.5rem;
+  padding: 1rem;
   background-color: #2C3E50;
   color: white;
-  margin: 0 -0.5rem 0.5rem;
+  //margin: 0 -0.5rem 0.5rem;
 }
 
 h4 {
