--- a/src/app/portfolio/portfolio-header/portfolio-header.component.html
+++ b/src/app/portfolio/portfolio-header/portfolio-header.component.html
@@ -1,4 +1,4 @@
-<header class="bg-primary text-white portfolio-header page">
+<header class="bg-primary text-white portfolio-header page-header">
   <div class="row">
     <div class="col-sm-9">
       <h1>{{personalInfo.firstName}} {{personalInfo.lastName}}</h1>
