--- a/src/app/portfolio/portfolio-header/portfolio-header.component.scss
+++ b/src/app/portfolio/portfolio-header/portfolio-header.component.scss
@@ -1,6 +1,9 @@
 .portfolio-header {
   min-height: 240px;
-  padding: 3rem 3rem;
+  padding: 3rem;
+  @media (max-width: 750px) {
+    padding: 1rem;
+  }
 }
 
 a {
