--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,7 +37,7 @@ body {
   background-color: whitesmoke;
 }
 
-.page {
+.page, .page-header {
   position: relative;
   padding: 0;
 
@@ -45,6 +45,16 @@ body {
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
   margin: 2rem auto;
   max-width: var(--A4-page-width-large);
+}
+
+@media (max-width: 750px) {
+  .page, .page-header {
+    margin: 0;
+    box-shadow: none;
+  }
+  .page-header {
+    border-bottom: 1px solid whitesmoke;
+  }
 }
 
 h1, h2, h3, h4 {
@@ -143,7 +153,7 @@ aside {
     text-decoration: none;
   }
 
-  .page {
+  .page, .page-header {
     position: static;
     size: A4 portrait;
     margin: 0;
