--- a/src/app/portfolio/portfolio-header/portfolio-header.component.scss
+++ b/src/app/portfolio/portfolio-header/portfolio-header.component.scss
@@ -1,7 +1,7 @@
 .portfolio-header {
   min-height: 240px;
   padding: 3rem;
-  @media (max-width: 750px) {
+  @media screen and (max-width: 750px) {
     padding: 1rem;
   }
 }
