--- a/src/app/portfolio/portfolio-header/portfolio-header.component.scss
+++ b/src/app/portfolio/portfolio-header/portfolio-header.component.scss
@@ -1,5 +1,5 @@
 .portfolio-header {
-  min-height: 240px;
+  //min-height: 240px;
   padding: 3rem;
   @media screen and (max-width: 750px) {
     padding: 1rem;
